2005-05-12  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(increment-number-at-point): allow prefix increment

2005-05-11  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(allout): use it
	(anchored-transpose): use it

	* config/lisp-config.el:
	(guile-scheme-mode): more keywords

	* perso/anchored-transpose.el: initial checkin

2005-04-28  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/visual.el:
	(jit-lock): replaces deprecated lazy-lock

	* dotemacs.el:
	(fc-eval-and-replace): new function from forcer. bind it to C-c e

2005-04-26  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn-hacked.el:
	(svn-log-edit-files-to-commit): restore previously existing function

	* perso/autoloads.el: more autoloads

	* dotemacs.el:
	(minimal): request planner-config here

	* config/muse-config.el:
	(request): only set options if possible

	* config/highlight-changes-config.el:
	(highlight-changes-config): fixed typo

	* config/fracc-config.el:
	(install-french-accent-mode-if-needed): require fracc inside the function

2005-04-25  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/autoloads.el:
	(irc): autoload erc-config

	* dotemacs.el:
	(type-break): activate it to fight RSI :/

	* dotemacs-cust.el:
	(custom-set-variables): erc settings

	* config/erc-config.el:
	(erc-autojoin-channels): use a custom version to support password protected channels
	(irc): move away personal settings to .emacs-local

2005-04-23  Yann Hodique  <Yann.Hodique@lifl.fr>

	* perso/psvn.el: updated to latest version from xsteve

	* dotemacs.el:
	(kbd): use "C-c +" as binding for increment-number-at-point

	* config/planner-config.el:
	(planner-bookmark): use it

2005-04-20  Yann Hodique  <Yann.Hodique@lifl.fr>

	* dotemacs.el:
	(increment-number-at-point): new function, based on a version from Alex Schröder

	* config/planner-config.el:
	(planner-bibtex): use it
	(planner-xtla): use it

	* dotemacs-cust.el: