@@ -139,7 +139,7 @@ Case is ignored if `case-fold-search' is non-nil in the current buffer.
 Goes backward if ARG is negative; error if CHAR not found." t nil)
 (autoload 'irc "erc-config" "" t nil)
 (autoload 'xtla "xtla" "" t nil)
-(autoload 'svn-status "psvn-hacked" "" t nil)
+(autoload 'svn-status "psvn" "" t nil)
 
 (provide 'autoloads)
 ;;; autoloads.el ends here
