@@ -29,7 +29,7 @@
 ;; psvn.el provides a similar interface for subversion as pcl-cvs for cvs.
 ;; At the moment the following commands are implemented:
 ;; M-x svn-status: run 'svn -status -v'
-;; and show the result in the *svn-status* buffer.
+;; and show the result in the svn-status-buffer-name buffer (normally: *svn-status*).
 ;; If svn-status-verbose is set to nil, only "svn status" without "-v"
 ;; is run. Currently you have to toggle this variable manually.
 ;; This buffer uses svn-status mode in which the following keys are defined:
@@ -167,10 +167,11 @@
 (defvar svn-status-verbose t "*Add '-v' to svn status call.")
 (defvar svn-log-edit-file-name "++svn-log++" "*Name of a saved log file.")
 (defvar svn-log-edit-insert-files-to-commit t "*Insert the filelist to commit in the *svn-log* buffer")
-(defvar svn-status-hide-unknown nil "*Hide unknown files in *svn-status* buffer.")
-(defvar svn-status-hide-unmodified nil "*Hide unmodified files in *svn-status* buffer.")
+(defvar svn-log-edit-use-log-edit-mode (and (ignore-errors (require 'log-edit)) t) "*Use log-edit-mode as base for svn-log-edit-mode")
+(defvar svn-status-hide-unknown nil "*Hide unknown files in `svn-status-buffer-name' buffer.")
+(defvar svn-status-hide-unmodified nil "*Hide unmodified files in `svn-status-buffer-name' buffer.")
 (defvar svn-status-directory-history nil "*List of visited svn working directories.")
-(defvar svn-status-sort-status-buffer t "Sort the *svn-status* buffer.
+(defvar svn-status-sort-status-buffer t "Sort the `svn-status-buffer-name' buffer.
 Setting this variable to nil speeds up M-x svn-status.
 However, it is possible, that the sorting is wrong in this case.")
 
@@ -180,7 +181,7 @@ Possible values are: commit, revert.")
 
 (defvar svn-status-negate-meaning-of-arg-commands nil
   "*List of operations that sould use a negated meaning of the prefix argument.
-The only supported function is 'svn-status.")
+The supported functions are `svn-status' and `svn-status-set-user-mark'.")
 
 (defvar svn-status-svn-executable "svn" "*The name of the svn executable.")
 
@@ -215,10 +216,12 @@ In either case the mark gets the face
 `svn-status-update-available-face', and will only be visible if
 `\\[svn-status-update]' is run with a prefix argument")
 
+(defvar svn-status-buffer-name "*svn-status*" "Name for the svn status buffer")
+
 (defvar svn-status-use-header-line t
   "*Whether a header line should be used.
 When t: Use the emacs header line
-When 'inline: Insert the header line in the *svn-status* buffer
+When 'inline: Insert the header line in the `svn-status-buffer-name' buffer
 Otherwise: Don't display a header line")
 
 ;;; default arguments to pass to svn commands
@@ -300,6 +303,15 @@ It is an experimental feature.")
 (defvar svn-status-commit-rev-number nil)
 (defvar svn-status-operated-on-dot nil)
 (defvar svn-status-elided-list nil)
+(defvar svn-status-custom-hide-function nil)
+
+;; That is an example for the svn-status-custom-hide-function:
+;; (setq svn-status-custom-hide-function 'svn-status-hide-pyc-files)
+;; (defun svn-status-hide-pyc-files (info)
+;;   "Hide all pyc files in the `svn-status-buffer-name' buffer."
+;;   (let* ((fname (svn-status-line-info->filename-nondirectory info))
+;;          (fname-len (length fname)))
+;;     (and (> fname-len 4) (string= (substring fname (- fname-len 4)) ".pyc"))))
 
 ;;; faces
 (defface svn-status-marked-face
@@ -352,7 +364,7 @@ See `svn-status--line-info->directory-p' for what counts as a directory."
 (defface svn-status-locked-face
   '((t
      (:weight bold :foreground "Red")))
-  "Face for the phrase \"[ LOCKED ]\" *svn-status* buffers."
+  "Face for the phrase \"[ LOCKED ]\" `svn-status-buffer-name' buffers."
   :group 'psvn-faces)
 
 ;based on vhdl-font-lock-directive-face
@@ -447,12 +459,12 @@ If ARG then pass the -u argument to `svn status'."
         (svn-status-load-state t)))
     (setq svn-status-directory-history (delete dir svn-status-directory-history))
     (add-to-list 'svn-status-directory-history dir)
-    (if (string= (buffer-name) "*svn-status*")
+    (if (string= (buffer-name) svn-status-buffer-name)
         (setq svn-status-display-new-status-buffer nil)
       (setq svn-status-display-new-status-buffer t)
       ;;(message "psvn: Saving initial window configuration")
       (setq svn-status-initial-window-configuration (current-window-configuration)))
-    (let* ((status-buf (get-buffer-create "*svn-status*"))
+    (let* ((status-buf (get-buffer-create svn-status-buffer-name))
            (proc-buf (get-buffer-create "*svn-process*"))
            (status-option (if svn-status-verbose
                               (if arg "-uv" "-v")
@@ -567,7 +579,7 @@ is prompted for give extra arguments, which are appended to ARGLIST."
                     (setq svn-status-update-previous-process-output nil))
                   (when svn-status-display-new-status-buffer
                     (set-window-configuration svn-status-initial-window-configuration)
-                    (switch-to-buffer "*svn-status*")))
+                    (switch-to-buffer svn-status-buffer-name)))
                  ((eq svn-process-cmd 'log)
                   (svn-status-show-process-output 'log t)
                   (pop-to-buffer svn-status-last-output-buffer-name)
@@ -791,7 +803,7 @@ The results are used to build the `svn-status-info' variable."
 ;;(string-lessp "." "%") => nil
 ;(svn-status-sort-predicate '(t t t ".") '(t t t "%")) => t
 (defun svn-status-sort-predicate (a b)
-  "Return t if A should appear before B in the *svn-status* buffer.
+  "Return t if A should appear before B in the `svn-status-buffer-name' buffer.
 A and B must be line-info's."
   (string-lessp (concat (svn-status-line-info->full-path a) "/")
                 (concat (svn-status-line-info->full-path b) "/")))
@@ -1087,7 +1099,7 @@ The following keys are defined:
 (defun svn-status-bury-buffer (arg)
   "Bury the buffers used by psvn.el
 Currently this is:
-  *svn-status*
+  `svn-status-buffer-name'
   *svn-log-edit*
   *svn-property-edit*
   *svn-log*
@@ -1104,7 +1116,7 @@ in use before `svn-status' was called."
              (when (get-buffer (car bl))
                (bury-buffer (car bl)))
              (setq bl (cdr bl)))
-           (when (string= (buffer-name) "*svn-status*")
+           (when (string= (buffer-name) svn-status-buffer-name)
              (bury-buffer))))))
 
 (defun svn-status-find-files ()
@@ -1310,7 +1322,7 @@ When called with the prefix argument 0, use the full path name."
 
 (defun svn-status-update-with-command-list (cmd-list)
   (save-excursion
-    (set-buffer "*svn-status*")
+    (set-buffer svn-status-buffer-name)
     (let ((st-info)
           (found)
           (action))
@@ -1479,19 +1491,20 @@ Symbolic links to directories count as directories (see `file-directory-p')."
             "\n")))
 
 (defun svn-status-update-buffer ()
-  "Update the *svn-status* buffer, using `svn-status-info'."
+  "Update the `svn-status-buffer-name' buffer, using `svn-status-info'."
   (interactive)
   ;(message (format "buffer-name: %s" (buffer-name)))
-  (unless (string= (buffer-name) "*svn-status*")
-    (set-buffer "*svn-status*"))
+  (unless (string= (buffer-name) svn-status-buffer-name)
+    (set-buffer svn-status-buffer-name))
   (svn-status-mode)
   (let ((st-info svn-status-info)
         (buffer-read-only nil)
         (start-pos)
         (overlay)
-        (unmodified-count 0)            ;how many unmodified files are hidden
-        (unknown-count 0)               ;how many unknown files are hidden
-        (marked-count 0)                ;how many files are elided
+        (unmodified-count 0)    ;how many unmodified files are hidden
+        (unknown-count 0)       ;how many unknown files are hidden
+        (custom-hide-count 0)   ;how many files are hidden via svn-status-custom-hide-function
+        (marked-count 0)        ;how many files are elided
         (user-elide-count 0)
         (fname (svn-status-line-info->filename (svn-status-get-line-information)))
         (fname-pos (point))
@@ -1507,6 +1520,9 @@ Symbolic links to directories count as directories (see `file-directory-p')."
              (svn-insert-line-in-status-buffer (car st-info)))
             ((svn-status-line-info->update-available (car st-info))
              (svn-insert-line-in-status-buffer (car st-info)))
+            ((and svn-status-custom-hide-function
+                  (apply svn-status-custom-hide-function (list (car st-info))))
+             (setq custom-hide-count (1+ custom-hide-count)))
             ((svn-status-line-info->hide-because-user-elide (car st-info))
              (setq user-elide-count (1+ user-elide-count)))
             ((svn-status-line-info->hide-because-unknown (car st-info))
@@ -1539,6 +1555,10 @@ Symbolic links to directories count as directories (see `file-directory-p')."
       (insert
        (format "%d Unmodified file(s) are hidden - press `_' to toggle hiding\n"
                unmodified-count)))
+    (when (> custom-hide-count 0)
+      (insert
+       (format "%d file(s) are hidden via the svn-status-custom-hide-function\n"
+               custom-hide-count)))
     (when (> user-elide-count 0)
       (insert (format "%d file(s) elided\n" user-elide-count)))
     (insert (format "%d file(s) marked\n" marked-count))
@@ -1560,7 +1580,7 @@ Symbolic links to directories count as directories (see `file-directory-p')."
 
 (defun svn-status-parse-info (arg)
   "Parse the svn info output for the base directory.
-Show the repository url after this call in the *svn-status* buffer.
+Show the repository url after this call in the `svn-status-buffer-name' buffer.
 When called with the prefix argument 0, reset the information to nil.
 This hides the repository information again.
 
@@ -1708,6 +1728,7 @@ If the cursor is on a directory all files in this directory are marked.
 If this function is called with a prefix argument, only the current line is
 marked, even if it is a directory."
   (interactive "P")
+  (setq arg (svn-status-possibly-negate-meaning-of-arg arg 'svn-status-set-user-mark))
   (let ((info (svn-status-get-line-information)))
     (if info
         (progn
@@ -1723,6 +1744,7 @@ If the cursor is on a directory, all files in this directory are unmarked.
 If this function is called with a prefix argument, only the current line is
 unmarked, even if is a directory."
   (interactive "P")
+  (setq arg (svn-status-possibly-negate-meaning-of-arg arg 'svn-status-set-user-mark))
   (let ((info (svn-status-get-line-information)))
     (if info
         (progn
@@ -1802,7 +1824,7 @@ svn-status-line-info->* functions can be used in the check."
 
 (defun svn-status-mark-unknown (arg)
   "Mark all unknown files.
-These are the files marked with '?' in the *svn-status* buffer.
+These are the files marked with '?' in the `svn-status-buffer-name' buffer.
 If the function is called with a prefix arg, unmark all these files."
   (interactive "P")
   (svn-status-apply-usermark-checked
@@ -1810,7 +1832,7 @@ If the function is called with a prefix arg, unmark all these files."
 
 (defun svn-status-mark-added (arg)
   "Mark all added files.
-These are the files marked with 'A' in the *svn-status* buffer.
+These are the files marked with 'A' in the `svn-status-buffer-name' buffer.
 If the function is called with a prefix ARG, unmark all these files."
   (interactive "P")
   (svn-status-apply-usermark-checked
@@ -1818,7 +1840,7 @@ If the function is called with a prefix ARG, unmark all these files."
 
 (defun svn-status-mark-modified (arg)
   "Mark all modified files.
-These are the files marked with 'M' in the *svn-status* buffer.
+These are the files marked with 'M' in the `svn-status-buffer-name' buffer.
 If the function is called with a prefix ARG, unmark all these files."
   (interactive "P")
   (svn-status-apply-usermark-checked
@@ -1829,7 +1851,7 @@ If the function is called with a prefix ARG, unmark all these files."
 
 (defun svn-status-mark-deleted (arg)
   "Mark all files scheduled for deletion.
-These are the files marked with 'D' in the *svn-status* buffer.
+These are the files marked with 'D' in the `svn-status-buffer-name' buffer.
 If the function is called with a prefix ARG, unmark all these files."
   (interactive "P")
   (svn-status-apply-usermark-checked
@@ -1942,7 +1964,7 @@ or (if no files were marked) the file under point."
     (insert postfix))))
 
 (defun svn-status-show-process-buffer-internal (&optional scroll-to-top)
-  (when (eq (current-buffer) "*svn-status*")
+  (when (eq (current-buffer) "`svn-status-buffer-name'")
     (delete-other-windows))
   (pop-to-buffer "*svn-process*")
   (when svn-status-wash-control-M-in-process-buffers
@@ -1966,7 +1988,7 @@ Consider svn-status-window-alist to choose the buffer name."
     (when svn-status-last-output-buffer-name
       (if window-mode
           (progn
-            (when (eq (current-buffer) "*svn-status*")
+            (when (eq (current-buffer) svn-status-buffer-name)
               (delete-other-windows))
             (pop-to-buffer "*svn-process*")
             (switch-to-buffer (get-buffer-create svn-status-last-output-buffer-name))
@@ -2277,12 +2299,12 @@ See `svn-status-marked-files' for what counts as selected."
     version))
 
 ;; --------------------------------------------------------------------------------
-;; Update the *svn-status* buffer, when a file is saved
+;; Update the `svn-status-buffer-name' buffer, when a file is saved
 ;; --------------------------------------------------------------------------------
 
 (defvar svn-status-file-modified-after-save-flag ?m
   "Flag shown whenever a file is modified and saved in Emacs.
-The flag is shown in the *svn-status* buffer.
+The flag is shown in the `svn-status-buffer-name' buffer.
 Recommended values are ?m or ?M.")
 (defun svn-status-after-save-hook ()
   "Set a modified indication, when a file is saved from a svn working copy."
@@ -2292,7 +2314,7 @@ Recommended values are ?m or ?M.")
          (svn-dir-len (length (or svn-dir "")))
          (file-dir-len (length file-dir))
          (file-name))
-    (when (and (get-buffer "*svn-status*")
+    (when (and (get-buffer svn-status-buffer-name)
                svn-dir
                (>= file-dir-len svn-dir-len)
                (string= (substring file-dir 0 svn-dir-len) svn-dir))
@@ -2308,7 +2330,7 @@ Recommended values are ?m or ?M.")
             (svn-status-line-info->set-filemark (car st-info)
                                                 svn-status-file-modified-after-save-flag)
             (save-window-excursion
-              (set-buffer "*svn-status*")
+              (set-buffer svn-status-buffer-name)
               (let ((buffer-read-only nil)
                     (pos (svn-status-get-file-name-buffer-position i-fname)))
                 (if pos
@@ -2317,7 +2339,7 @@ Recommended values are ?m or ?M.")
                       (delete-region (point-at-bol) (point-at-eol))
                       (svn-insert-line-in-status-buffer (car st-info))
                       (delete-char 1))
-                  (message "psvn: file %s not found, updating *svn-status* buffer content..."
+                  (message "psvn: file %s not found, updating `svn-status-buffer-name' buffer content..."
                            i-fname)
                   (svn-status-update-buffer)))))
           (setq st-info (cdr st-info))))))
@@ -2349,19 +2371,26 @@ Otherwise get only the actual file."
     (setq svn-status-get-specific-revision-file-info nil)
     (while file-names
       (setq file-name (car file-names))
-      (setq file-name-with-revision (concat file-name ".~" revision "~"))
+      (setq file-name-with-revision (make-temp-file (file-name-nondirectory (concat file-name ".~" revision "~"))))
       (add-to-list 'svn-status-get-specific-revision-file-info
                    (cons file-name file-name-with-revision))
       (save-excursion
-        (find-file file-name-with-revision)
-        (setq buffer-read-only nil)
-        (delete-region (point-min) (point-max))
-        (svn-run-svn nil t 'cat (append (list "cat" "-r" revision) (list file-name)))
-        ;;todo: error processing
-        ;;svn: Filesystem has no item
-        ;;svn: file not found: revision `15', path `/trunk/file.txt'
-        (insert-buffer-substring "*svn-process*")
-        (save-buffer))
+        (let ((content
+               (with-temp-buffer
+                 (if (string= revision "BASE")
+                     (insert-file-contents (concat (file-name-directory file-name) ".svn/text-base/" (file-name-nondirectory file-name) ".svn-base"))
+                   (progn
+                     (svn-run-svn nil t 'cat (append (list "cat" "-r" revision) (list file-name)))
+                     ;;todo: error processing
+                     ;;svn: Filesystem has no item
+                     ;;svn: file not found: revision `15', path `/trunk/file.txt'
+                     (insert-buffer-substring "*svn-process*")))
+                 (buffer-string))))
+          (find-file file-name-with-revision)
+          (setq buffer-read-only nil)
+          (delete-region (point-min) (point-max))
+          (insert content)
+          (save-buffer)))
       (setq file-names (cdr file-names)))
     (setq svn-status-get-specific-revision-file-info
       (nreverse svn-status-get-specific-revision-file-info))
@@ -2379,7 +2408,7 @@ If ARG then prompt for revision to diff against."
          (base-buff (find-file-noselect (cdar svn-status-get-specific-revision-file-info)))
          (svn-transient-buffers (list base-buff ))
          (startup-hook '(svn-ediff-startup-hook)))
-    (ediff-buffers my-buffer base-buff  startup-hook)))
+    (ediff-buffers base-buff my-buffer  startup-hook)))
 
 (defun svn-ediff-startup-hook ()
   (add-hook 'ediff-after-quit-hook-internal
@@ -2393,7 +2422,9 @@ If ARG then prompt for revision to diff against."
   (dolist (tb tmp-bufs)
     (when (and tb (buffer-live-p tb) (not (buffer-modified-p tb)))
       (let ((win (get-buffer-window tb t)))
-    (when win (delete-window win))
+    (condition-case nil
+        (when win (delete-window win))
+      (error nil))
     (kill-buffer tb))))
   ;; switch back to the *svn* buffer
   (when (and svn-buf (buffer-live-p svn-buf)
@@ -2485,7 +2516,7 @@ When called with a prefix argument, it is possible to enter a new property."
                                   nil svn-status-property-edit-must-match-flag))
            (unless (string= prop-name "")
              (save-excursion
-               (set-buffer "*svn-status*")
+               (set-buffer svn-status-buffer-name)
                (svn-status-property-edit (list (svn-status-get-line-information))
                                          prop-name))))
           ((eq last-command 'svn-status-property-set)
@@ -2495,7 +2526,7 @@ When called with a prefix argument, it is possible to enter a new property."
            (setq prop-value (read-from-minibuffer "Property value: "))
            (unless (string= prop-name "")
              (save-excursion
-               (set-buffer "*svn-status*")
+               (set-buffer svn-status-buffer-name)
                (message "Setting property %s := %s for %S" prop-name prop-value
                         (svn-status-marked-file-names))
                (let ((file-names (svn-status-marked-file-names)))
@@ -2511,7 +2542,7 @@ When called with a prefix argument, it is possible to enter a new property."
                  (completing-read "Delete Property - Name: " (mapcar 'list pl) nil t))
            (unless (string= prop-name "")
              (save-excursion
-               (set-buffer "*svn-status*")
+               (set-buffer svn-status-buffer-name)
                (let ((file-names (svn-status-marked-file-names)))
                  (when file-names
                    (message "Going to delete prop %s for %s" prop-name file-names)
@@ -2735,17 +2766,17 @@ Commands:
 
 (defun svn-prop-edit-svn-diff (arg)
   (interactive "P")
-  (set-buffer "*svn-status*")
+  (set-buffer svn-status-buffer-name)
   (svn-status-show-svn-diff-for-marked-files arg))
 
 (defun svn-prop-edit-svn-log (arg)
   (interactive "P")
-  (set-buffer "*svn-status*")
+  (set-buffer svn-status-buffer-name)
   (svn-status-show-svn-log arg))
 
 (defun svn-prop-edit-svn-status ()
   (interactive)
-  (pop-to-buffer "*svn-status*")
+  (pop-to-buffer svn-status-buffer-name)
   (other-window 1))
 
 ;; --------------------------------------------------------------------------------
@@ -2753,6 +2784,31 @@ Commands:
 ;; --------------------------------------------------------------------------------
 
 (defvar svn-log-edit-mode-map () "Keymap used in `svn-log-edit-mode' buffers.")
+
+(if svn-log-edit-use-log-edit-mode
+    (define-derived-mode svn-log-edit-mode log-edit-mode "svn-log-edit"
+      "Wrapper around `log-edit-mode' for psvn.el"
+      (easy-menu-add svn-log-edit-mode-menu)
+      (run-hooks 'svn-log-edit-mode-hook)
+      (setq svn-log-edit-update-log-entry nil)
+      (set (make-local-variable 'log-edit-callback) 'svn-log-edit-done)
+      (set (make-local-variable 'log-edit-listfun) 'svn-log-edit-files-to-commit)
+      (set (make-local-variable 'log-edit-initial-files) (log-edit-files))
+      (message (substitute-command-keys
+                "Press \\[log-edit-done] when you are done editing."))
+      )
+  (defun svn-log-edit-mode ()
+    "Major Mode to edit svn log messages.
+Commands:
+\\{svn-log-edit-mode-map}"
+    (interactive)
+    (kill-all-local-variables)
+    (use-local-map svn-log-edit-mode-map)
+    (easy-menu-add svn-log-edit-mode-menu)
+    (setq major-mode 'svn-log-edit-mode)
+    (setq mode-name "svn-log-edit")
+    (setq svn-log-edit-update-log-entry nil)
+    (run-hooks 'svn-log-edit-mode-hook)))
 
 (when (not svn-log-edit-mode-map)
   (setq svn-log-edit-mode-map (make-sparse-keymap))
@@ -2776,19 +2832,6 @@ Commands:
                     ["Show files to commit" svn-log-edit-show-files-to-commit t]
                     ["Erase buffer" svn-log-edit-erase-edit-buffer]
                     ["Abort" svn-log-edit-abort t]))
-
-(defun svn-log-edit-mode ()
-  "Major Mode to edit svn log messages.
-Commands:
-\\{svn-log-edit-mode-map}"
-  (interactive)
-  (kill-all-local-variables)
-  (use-local-map svn-log-edit-mode-map)
-  (easy-menu-add svn-log-edit-mode-menu)
-  (setq major-mode 'svn-log-edit-mode)
-  (setq mode-name "svn-log-edit")
-  (setq svn-log-edit-update-log-entry nil)
-  (run-hooks 'svn-log-edit-mode-hook))
 
 (defun svn-log-edit-abort ()
   (interactive)
@@ -2831,23 +2874,25 @@ Commands:
   "Show the diff we are about to commit.
 If ARG then show diff between some other version of the selected files."
   (interactive "P")
-  (set-buffer "*svn-status*")
+  (set-buffer svn-status-buffer-name)
   (svn-status-show-svn-diff-for-marked-files arg))
 
 (defun svn-log-edit-svn-log (arg)
   (interactive "P")
-  (set-buffer "*svn-status*")
+  (set-buffer svn-status-buffer-name)
   (svn-status-show-svn-log arg))
 
 (defun svn-log-edit-svn-status ()
   (interactive)
-  (pop-to-buffer "*svn-status*")
+  (pop-to-buffer svn-status-buffer-name)
   (other-window 1))
+
+(defun svn-log-edit-files-to-commit ()
+  (mapcar 'svn-status-line-info->filename svn-status-files-to-commit))
 
 (defun svn-log-edit-show-files-to-commit ()
   (interactive)
-  (message "Files to commit: %S"
-           (mapcar 'svn-status-line-info->filename svn-status-files-to-commit)))
+  (message "Files to commit: %S" (svn-log-edit-files-to-commit)))
 
 (defun svn-log-edit-save-message ()
   "Save the current log message to the file `svn-log-edit-file-name'."
@@ -3017,7 +3062,7 @@ This function will be removed again, when a faster parsing and
 display routine for svn-status is available."
   (interactive)
   (setq svn-status-sort-status-buffer (not svn-status-sort-status-buffer))
-  (message (concat "The *svn-status* buffer will be"
+  (message (concat "The `svn-status-buffer-name' buffer will be"
                    (if svn-status-sort-status-buffer "" " not")
                    " sorted.")))
 
@@ -3158,12 +3203,12 @@ The conflicts must be marked with rcsmerge conflict markers."
 ;;  M-x svn-status
 ;;  M-x elp-results
 
-(defun svn-status-elp-init ()
-  (interactive)
-  (require 'elp)
-  (elp-reset-all)
-  (elp-instrument-package "svn-")
-  (message "Run the desired svn command (e.g. M-x svn-status), then use M-x elp-results."))
+;; (defun svn-status-elp-init ()
+;;   (interactive)
+;;   (require 'elp)
+;;   (elp-reset-all)
+;;   (elp-instrument-package "svn-")
+;;   (message "Run the desired svn command (e.g. M-x svn-status), then use M-x elp-results."))
 
 
 (provide 'psvn)
